--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/jest": "^27.0.2",
     "@webpack-cli/generators": "^2.4.1",
+    "babel-jest": "^27.3.1",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": ">=6",
@@ -27,6 +33,7 @@
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
